--- a/src/main/res/layout/item_message_sender.xml
+++ b/src/main/res/layout/item_message_sender.xml
@@ -1,79 +1,78 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:elevation="4dp"
+        android:backgroundTint="#9E9E9E"
+        app:cardCornerRadius="6dp">
+
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="5dp"
+        android:textColor="#fff"
+        android:padding="2dp"
+        android:text="Yesterday"/>
+    </androidx.cardview.widget.CardView>
 
     <RelativeLayout
-        android:paddingBottom="16dp"
         android:id="@+id/container"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:background="@drawable/card_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_gravity="right"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/card_bg_dark">
+
 
         <TextView
-
-            android:id="@+id/tv_title"
+            android:id="@+id/sender_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="20dp"
-            android:text="Simple Title Text "
-            android:textColor="@color/title_text_color"
-            android:textStyle="bold" />
+            android:layout_margin="8dp"
+            android:visibility="gone"
+            android:fontFamily="@font/medium"
+            android:text="~ Moinka Chauhan"
+            android:textColor="@color/colorAccent"
+            android:textSize="10dp" />
+
+
 
         <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title"
-            android:layout_alignStart="@+id/tv_title"
-            android:layout_alignLeft="@id/tv_title"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="16dp"
-            android:lineSpacingExtra="8dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "
-            android:textColor="@color/content_text_color" />
-
-        <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/content_text_color"
+            android:layout_centerInParent="true"
+            android:layout_margin="12dp"
+            android:fontFamily="@font/medium"
+            android:text="HII MOIKA CHAUHA"
+            android:textColor="#fff"
+            android:textSize="15dp" />
 
-            />
+
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/img_user"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/container"
-        app:layout_constraintStart_toStartOf="@+id/container"
-        app:layout_constraintTop_toTopOf="@+id/container"
-        app:srcCompat="@mipmap/ic_launcher" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/seen_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:fontFamily="@font/medium"
+        android:textColor="@color/colorAccent"
+        android:textSize="10dp" />
+
+</LinearLayout>
+
