--- a/src/main/res/drawable/card_bg.xml
+++ b/src/main/res/drawable/card_bg.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/card_bg_color"/>
+   <stroke android:color="@color/colorPrimary"
+       android:width="1dp"/>
+
 
     <corners android:radius="16dp" />
 
