--- a/src/main/res/layout/activity_chat.xml
+++ b/src/main/res/layout/activity_chat.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    android:id="@+id/layout"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
