--- a/src/main/res/layout/fragment_users.xml
+++ b/src/main/res/layout/fragment_users.xml
@@ -4,15 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_background"
-    tools:context=".Group">
+    tools:context=".OneToOne">
 
 
-    <TextView
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_group"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
+        android:visibility="visible"
         android:layout_height="wrap_content"
-        android:textSize="60dp"
         android:layout_centerInParent="true"
-        android:text="Users" />
+        android:background="@android:color/transparent" />
 
 </RelativeLayout>
