--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black" >#000000</color>
 
     <color name="black_background" >#2b2b2b</color>
+    <color name="back_online" >#76FF03</color>
 
 
 
